--- a/computing/STAC_specs/notebooks/run_final_flow.ipynb
+++ b/computing/STAC_specs/notebooks/run_final_flow.ipynb
@@ -96,9 +96,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/input/metadata/layer_mapping.csv\n",
-      "../data/input/metadata/layer_descriptions.csv\n",
-      "../data/input/metadata/vector_column_descriptions.csv\n",
       "geoserver_workspace_name=drainage\n",
       "geoserver_layer_name=koraput_koraput\n",
       "style file url = https://raw.githubusercontent.com/core-stack-org/QGIS-Styles/main/Hydrology/Drainage-Layer-Style.qml\n"
@@ -108,9 +105,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/nirzaree/miniconda3/envs/.stac/lib/python3.13/site-packages/pyogrio/raw.py:198: RuntimeWarning: Several features with id = 111 have been found. Altering it to be unique. This warning will not be emitted anymore for this layer\n",
-      "  return ogr_read(\n",
-      "/home/nirzaree/Code/GitClones/STAC-spec/notebooks/generate_STAC_layerwise.py:796: SettingWithCopyWarning: \n",
+      "/home/nirzaree/Code/GitClones/core-stack-org/core-stack-backend/computing/STAC_specs/notebooks/../generate_STAC_layerwise.py:798: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -122,11 +117,11 @@
      "output_type": "stream",
      "text": [
       "Applying categorized style...\n",
-      "Thumbnail saved to: ../data/STAC_output_exception_handling/koraput_drainage_lines_vector.png\n",
+      "Thumbnail saved to: ../../../computing/STAC_specs/data/STAC_output_prod/koraput_drainage_lines_vector.png\n",
       "created block catalog\n",
       "created district catalog\n",
       "created state collection\n",
-      "loaded root catalog\n"
+      "created root catalog\n"
      ]
     },
     {
@@ -149,6 +144,16 @@
     "                    #  layer_desc_csv_path='../data/input/metadata/layer_descriptions.csv',\n",
     "                    #  column_desc_csv_path='../data/input/metadata/vector_column_descriptions.csv'\n",
     "                     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6766990c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.getcwd()"
    ]
   },
   {
@@ -1413,7 +1418,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".stac",
+   "display_name": "black",
    "language": "python",
    "name": "python3"
   },
@@ -1427,7 +1432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
